[package]
name = "account-history-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "solana-act-history"
path = "src/main.rs"

[dependencies]
anchor-lang = "0.26.0"
account-history-program = { path = "../programs/account-history-program" }
solana-client = "1.14.16"
solana-sdk = "1.14.16"
thiserror = "1.0.39"
bytemuck = "1.13.1"
clap = { version = "3.2.23", features = [ "derive", "env" ] }
anyhow = "1.0.69"
solana-clap-v3-utils = "1.14.16"
solana-cli-config = "1.14.16"

[dev-dependencies]
spl-token = "3.5.0"
spl-associated-token-account = "1.1.2"
anchor-spl = "0.26.0"
