[package]
name = "account-history-client"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "solana-act-history"
path = "src/main.rs"

[dependencies]
anchor-lang = "0.27.0"
account-history-program = { path = "../programs/account-history-program" }
solana-client = "1.14"
solana-sdk = "1.14"
thiserror = "1.0.39"
bytemuck = "1.13.1"
clap = { version = "3.2.23", features = [ "derive", "env" ] }
anyhow = "1.0.69"
solana-clap-v3-utils = "1.14"
solana-cli-config = "1.14"

[dev-dependencies]
spl-token = "3.5.0"
spl-associated-token-account = "1.1.2"
anchor-spl = "0.27.0"
