[package]
name = "account-history-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "account_history_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.27.0"
pyth-sdk-solana = "0.7.0"
bytemuck = "1.13.1"

[dev-dependencies]
solana-program = "1.14"
base64 = "0.21.0"
